--- a/LAB_VM4/LAB_VM4.csproj
+++ b/LAB_VM4/LAB_VM4.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Derivative.cs" />
+    <Compile Include="DerivativeDouble.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Interpolation.cs" />
+    <Compile Include="InterpolationDouble.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sweep.cs" />
