--- a/Lab4_VM_Test/Lab4_VM_Test.csproj
+++ b/Lab4_VM_Test/Lab4_VM_Test.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DerivativeDoubleTest.cs" />
     <Compile Include="DerivativeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
